--- a/sesion19/agendaV3.html
+++ b/sesion19/agendaV3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./agendaV2.css">
+    <link rel="stylesheet" href="./agendaV3.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,6 +18,8 @@
             <input type="text" placeholder="Nombre" id="nombre"> <br> <br>
             <span>Num Celular: </span>
             <input type="text" placeholder="Movil" id="movil"><br><br> 
+            <span>E-mail: </span>
+            <input type="text" placeholder="Email" id="email">
         </form>
         <hr />
         <div>
@@ -27,9 +29,9 @@
             <button type="button" onclick="eliminarTodo()">EliminarTodos</button>
         </div>
         <hr>
-        <span class="titu">Nombre</span> <span class="titu">Celular</span> <br>
+        <span class="titu">Nombre</span> <span class="titu">Celular</span> <span class="titu">E-mail</span>  <br>
         <ul id="contactos"></ul>
     </div>
-    <script type="text/javascript" src="./agendaV2.js"></script>
+    <script type="text/javascript" src="./agendaV3.js"></script>
 </body>
 </html>
