--- a/Sesion 22/keyframe.html
+++ b/Sesion 22/keyframe.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/keyframe.css">
     <title>Document</title>
-    <link rel="stylesheet" href="./Sesion 22/CSS/keyframe.css">
 </head>
 <body>
-    <p>Universidad Católica Santo Toribio de Mogrovejo.
-        Formammos personas y mejores profesionalales</p>
+    <p>Universidad Católica Santo Toribio de Mogrovejo. Formamos personas y mejores profesionales</p>
 </body>
 </html>
