--- a/sesion 25/index.html
+++ b/sesion 25/index.html
@@ -82,14 +82,14 @@
         <section>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item list-group-item-action active">Nuestros servicios</li>
-                <li class="list-group-item">Desparacitación</li>
-                <li class="list-group-item">Vacunaci[on</li>
-                <li class="list-group-item">Baños medicados</li>
-                <li class="list-group-item">Hospitalización</li>
-                <li class="list-group-item">Laboratorios</li>
-                <li class="list-group-item">Eemergencia</li>
-                <li class="list-group-item">Tele consultas</li>
-                <li class="list-group-item">Radiología</li>
+                <li class="list-group-item list-group-item-action">Desparacitación</li>
+                <li class="list-group-item list-group-item-action">Vacunaci[on</li>
+                <li class="list-group-item list-group-item-action">Baños medicados</li>
+                <li class="list-group-item list-group-item-action">Hospitalización</li>
+                <li class="list-group-item list-group-item-action">Laboratorios</li>
+                <li class="list-group-item list-group-item-action">Eemergencia</li>
+                <li class="list-group-item list-group-item-action">Tele consultas</li>
+                <li class="list-group-item list-group-item-action">Radiología</li>
               </ul>
         </section>
         <aside>
@@ -99,7 +99,7 @@
                     <img src="./img/HD-wallpaper-friends-in-sunset-sun-friendship-sunset-silhouette-woman-dog.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/portada2.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/como_hacer_feliz_a_tu_perro_24231_orig.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
                     <img src="./img/frisbee-para-perros-768x511.jpeg" class="d-block w-100" alt="...">
@@ -169,7 +169,7 @@
 
     <div class="card-group">
         <div class="card" style="background-color: skyblue;">
-            <img src="img/alimentacion.jpg" class="card-img-top" alt="...">
+            <img src="img/perro-comiendo.jpg" class="card-img-top" alt="...">
             <div class="card-body"  >
                 <h5  class="card-title">ALIMENTACIÓN</h5>
                 <p class="card-text"> Disponemos de las marcas lideres del mercado en alimetación canina y felina.</p>
@@ -177,7 +177,7 @@
             </div>
         </div>
         <div class="card" style="background-color: skyblue;">
-            <img src="img/cirugia.jpg" class="card-img-top" alt="...">
+            <img src="img/cirugia.jpg" class="card-img-top" alt="..." >
             <div class="card-body">
                 <h5 class="card-title">CIRUGÍA</h5>
                 <p class="card-text">Nuestro equipo cuenta con una excelente experiencia en el area quirúrgica.</p>
@@ -185,7 +185,7 @@
             </div>
         </div>
         <div class="card"style="background-color: skyblue;">
-            <img src="img/vacunacion.jpg" class="card-img-top" alt="...">
+            <img src="img/vacunacion-perro-doggysvet.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">VACUNACIÓN</h5>
                 <p class="card-text">Las vacunas disminuyen el riesgo de adquirir enfermedades infecto - contagiosas.</p>
