--- a/sesion 25/index.html
+++ b/sesion 25/index.html
@@ -167,7 +167,7 @@
 
 
 
-    <div class="card-group">
+    <div id="servicios" class="card-group">
         <div class="card" style="background-color: skyblue;">
             <img src="img/perro-comiendo.jpg" class="card-img-top" alt="...">
             <div class="card-body"  >
