--- a/sesion19/agendaV3.html
+++ b/sesion19/agendaV3.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./agendaV3.css">
+    <link rel="stylesheet" href="agendaV3.css">
     <title>Document</title>
 </head>
-<body>
+<body
+onload="actualizarDatos()">
     <div id="contenedor">
         <header>
             <h3>Mi Agenda de contactos</h3>
@@ -15,23 +16,23 @@
         </header>
         <form>
             <span>Nombre:</span>
-            <input type="text" placeholder="Nombre" id="nombre"> <br> <br>
+            <input type="text" placeholder="Nombre" id="nombre"><br><br>
             <span>Num Celular: </span>
-            <input type="text" placeholder="Movil" id="movil"><br><br> 
+            <input type="text" placeholder="movil" id="movil"><br><br>
             <span>E-mail: </span>
-            <input type="text" placeholder="Email" id="email">
+            <input type="text" placeholder="email" id="email">
         </form>
         <hr />
         <div>
-            <button type="button" onclick="guardarDato()">Guardar</button>
-            <button type="button" onclick="recuperarDato()">Recuperar</button>
-            <button type="button" onclick="eliminarDato()">Eliminar</button>
-            <button type="button" onclick="eliminarTodo()">EliminarTodos</button>
+            <button type="button" onclick="guardarDato()"> Guardar</button>
+            <button type="button" onclick="recuperarDato()"> Recuperar</button>
+            <button type="button" onclick="eliminarDato()"> Eliminar</button>
+            <button type="button" onclick="eliminarTodo()">Eliminar Todos</button>
         </div>
         <hr>
-        <span class="titu">Nombre</span> <span class="titu">Celular</span> <span class="titu">E-mail</span>  <br>
+        <span class="titu">Nombre</span> <span class="titu">Celular</span> <span class="titu">E-mail</span><br>
         <ul id="contactos"></ul>
     </div>
-    <script type="text/javascript" src="./agendaV3.js"></script>
+    <script type="text/javascript" src="agendaV3.js"></script>
 </body>
 </html>
