--- a/Examen 2/compras.html
+++ b/Examen 2/compras.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/compras.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/FERRETERIA.png" type="image/x-icon">
     <title>COMPRAS</title>
 </head>
 
@@ -47,16 +47,16 @@
                             </div>
                             <div class="modal-footer"><!-- Link de redirección a la página de compras -->
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                <a type="button" class="btn btn-primary" href="Compras.html">Ir a la tienda</a>
+                                <a type="button" class="btn btn-primary" href="./compras.html">Ir a la tienda</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a href="nosotros.html">Nosotros</a>
+                <a href="./nosotros.html">Nosotros</a>
             </nav>
             <header class="conteiner-fluid">
                 <div id="foto">
-                    <img src="" alt="Ferreteria Clavito">
+                    <img src="./img/FERRETERIA.png" alt="Ferreteria Clavito">
                 </div>
                 <div id="inicio">
                     <button type="button" class="btn btn-primary btn-floating btn-light btn-lg" data-bs-toggle="modal"
@@ -76,7 +76,7 @@
 
                                     <div class="d-flex align-items-center">
                                         <div class="flex-shrink-0">
-                                            <img src="img/logo.png" alt="Producto"
+                                            <img src="./img/FERRETERIA.png" alt="Producto"
                                                 style="width: 100px; height: 100px;">
                                         </div>
                                         <div class="flex-grow-1 ms-3">
@@ -91,7 +91,7 @@
                                 <div class="modal-footer"> <!-- Link de redirección a la página de compras -->
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Cerrar</button>
-                                    <a type="button" class="btn btn-primary" href="Compras.html">Ir a la
+                                    <a type="button" class="btn btn-primary" href="./compras.html">Ir a la
                                         tienda</a>
                                 </div>
                             </div>
