--- a/Examen 2/index.html
+++ b/Examen 2/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css    ">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./img/217-2174825_servicios-generales-icono-ferreteria-png.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/FERRETERIA.png" type="image/x-icon">
     <title>INICIO</title>
 </head>
 
@@ -34,7 +34,7 @@
                                 
                                 <div class="d-flex align-items-center">
                                     <div class="flex-shrink-0">
-                                        <img src="./img/217-2174825_servicios-generales-icono-ferreteria-png.png" alt="Producto"
+                                        <img src="./img/FERRETERIA.png" alt="Producto"
                                             style="width: 100px; height: 100px;">
                                     </div>
                                     <div class="flex-grow-1 ms-3">
@@ -43,9 +43,9 @@
                                 </div>
 
                             </div>
-                            <div class="modal-footer"><!-- Link de redirección a la página de compras -->
+                            <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                <a type="button" class="btn btn-primary" href="compras.html">Ir a la tienda</a>
+                                <a type="button" class="btn btn-primary" href="./compras.html">Ir a la tienda</a>
                             </div>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
             </nav>
             <header class="conteiner-fluid">
                 <div id="foto">
-                    <img src="Img/logo.png" alt="Ferreteria Clavito">
+                    <img src="./img/FERRETERIA.png" alt="Ferreteria Clavito">
                 </div>
                 <div id="inicio">
                     <button type="button" class="btn btn-primary btn-floating btn-light btn-lg" data-bs-toggle="modal"
@@ -64,13 +64,12 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel" style="color: red;">¡Bienvenido a la Feereteria Clavito !
+                                    <h5 class="modal-title" id="staticBackdropLabel" style="color: brown;">¡Bienvenido a la Feereteria Clavito !
                                     </h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <!-- Imagen y texto -->
 
                                     <div class="d-flex align-items-center">
                                         <div class="flex-shrink-0">
@@ -86,10 +85,10 @@
                                     </div>
 
                                 </div>
-                                <div class="modal-footer"> <!-- Link de redirección a la página de compras -->
+                                <div class="modal-footer"> 
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Cerrar</button>
-                                    <a type="button" class="btn btn-primary" href="Compras.html">Ir a la
+                                    <a type="button" class="btn btn-primary" href="./compras.html">Ir a la
                                         tienda</a>
                                 </div>
                             </div>
