--- a/Examen 2/nosotros.html
+++ b/Examen 2/nosotros.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/bootstrap.min.css">
     <link rel="stylesheet" href="Css/nosotros.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/FERRETERIA.png" type="image/x-icon">
     <title>NOSOTROS</title>
 </head>
 
@@ -35,7 +35,7 @@
 
                                 <div class="d-flex align-items-center">
                                     <div class="flex-shrink-0">
-                                        <img src="img/logo.png" alt="Producto"
+                                        <img src="./img/FERRETERIA.png" alt="Producto"
                                             style="width: 100px; height: 100px;">
                                     </div>
                                     <div class="flex-grow-1 ms-3">
@@ -57,7 +57,7 @@
             </nav>
             <header class="conteiner-fluid">
                 <div id="foto">
-                    <img src="Img/logo.png" alt="Ferreteria Clavito">
+                    <img src="./img/FERRETERIA.png" alt="Ferreteria Clavito">
                 </div>
                 <div id="inicio">
                     <button type="button" class="btn btn-primary btn-floating btn-light btn-lg" data-bs-toggle="modal"
