--- a/Examen 2/index.html
+++ b/Examen 2/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css    ">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./img/FERRETERIA.png" type="image/x-icon">
-    <title>INICIO</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/LogoPrincipal.png" type="image/x-icon">
+    <title>Ferreterias Clavito</title>
 </head>
 
 <body>
@@ -34,7 +37,7 @@
 
                                 <div class="d-flex align-items-center">
                                     <div class="flex-shrink-0">
-                                        <img src="./img/FERRETERIA.png" alt="Producto"
+                                        <img src="./img/LogoPrincipal.png" alt="Producto"
                                             style="width: 100px; height: 100px;">
                                     </div>
                                     <div class="flex-grow-1 ms-3">
@@ -52,60 +55,115 @@
                         </div>
                     </div>
                 </div>
+
                 <a href="./nosotros.html">Nosotros</a>
             </nav>
-            <header class="conteiner-fluid">
-                <div id="foto">
-                    <img src="./img/FERRETERIA.png" alt="Ferreteria Clavito">
-                </div>
-                <div id="inicio">
-                    <button type="button" class="btn btn-primary btn-floating btn-light btn-lg" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop"><i class="fas fa-shopping-cart"></i></button>
-                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel" style="color: brown;">¡Bienvenido a
-                                        la Ferreteria Clavito !
-                                    </h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
 
-                                    <div class="d-flex align-items-center">
-                                        <div class="flex-shrink-0">
-                                            <img src="./img/FERRETERIA.png" alt="Producto"
-                                                style="width: 100px; height: 100px;">
-                                        </div>
-                                        <div class="flex-grow-1 ms-3">
-                                            <p style="color: black; text-align: justify;">Ferreteria Clavito te da la
-                                                Bienvenida.
-                                                Aprovecha nuestras increíbles
-                                                ofertas por BlackFriday.
-                                            </p>
-                                        </div>
+                <header class="conteiner-fluid">
+                    <div id="foto">
+                        <img class="logoprincipal" src="./img/LogoPrincipal.png" alt="Ferreteria Clavito">
+                    </div>
+                    <!-- barra de navegacion -->
+                    <nav id="form" class="navbar navbar-light" style="background-color: red;">
+                        <form class="form-inline">
+                            <input id="barra" class="form-control mr-sm-2" type="search" placeholder="Search"
+                                aria-label="Search">
+                            <button id="botonbarra" class="btn btn-outline-success my-2 my-sm-0"
+                                type="submit">Search</button>
+                        </form>
+                    </nav>
+
+                    <!-- fin de barra de navegacion -->
+                    
+                    <div id="inicio">
+                        <button id="botoncarrito" type="button" class="btn btn-primary btn-floating btn-light btn-lg"
+                            data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            <i class="fas fa-shopping-cart"></i></button>
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="staticBackdropLabel" style="color: brown;">
+                                            ¡Bienvenido a
+                                            la Ferreteria Clavito !
+                                        </h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
                                     </div>
+                                    <div class="modal-body">
 
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Cerrar</button>
-                                    <a type="button" class="btn btn-primary" href="./compras.html">Ir a la
-                                        tienda</a>
+                                        <div class="d-flex align-items-center">
+                                            <div class="flex-shrink-0">
+                                                <img src="./img/LogoPrincipal.png" alt="Producto"
+                                                    style="width: 100px; height: 100px;">
+                                            </div>
+                                            <div class="flex-grow-1 ms-3">
+                                                <p style="color: black; text-align: justify;">Ferreteria Clavito te
+                                                    da la
+                                                    Bienvenida.
+                                                    Aprovecha nuestras increíbles
+                                                    ofertas por BlackFriday.
+                                                </p>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Cerrar</button>
+                                        <a type="button" class="btn btn-primary" href="./compras.html">Ir a la
+                                            tienda</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
+                        <!-- USEER -->
+                        <div class="profile-menu">
+                            <div class="action">
+                                <img src="img/profile.png" />
+                            </div>
+                            <div class="menu">
+                                <div class="profile">
+                                    <img src="img/profile.png" />
+                                    <div class="info">
+                                        <h2>Lucio Fernandez</h2>
+                                        <p>@lufz</p>
+                                    </div>
+                                </div>
+                                <a href="#" class="btn">
+                                    <img src="img/plus.png" />
+                                    Add profile
+                                </a>
+                                <ul>
+                                    <li>
+                                        <img src="img/edit.png" />
+                                        <a href="#">Edit profile</a>
+                                    </li>
+                                    <li>
+                                        <img src="img/setting.png" />
+                                        <a href="#">App setting</a>
+                                    </li>
+                                    <li>
+                                        <img src="img/user.png" />
+                                        <a href="#">Account</a>
+                                    </li>
+                                    <li>
+                                        <img src="img/help.png" />
+                                        <a href="#">Help</a>
+                                    </li>
+                                    <li>
+                                        <img src="img/logout.png" />
+                                        <a href="#">Log out</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- FIN USER -->
                     </div>
-
-                    <a type="button" class="btn btn-floating btn-light btn-lg"><i class="fas fa-user"></i></a>
-
-
-                </div>
-                <br>
-                <h1 id="titulo" class="text-left">Ferreteria Clavito</h1>
-            </header>
+                    <br>
+                </header>
         </div>
 
         <div class="row">
@@ -116,10 +174,10 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./img/carruselP4.jpeg" class="d-block w-100" alt="..." width="600" height="500">
+                            <img src="./img/carrusel.jpg" class="d-block w-100" alt="..." width="200" height="500">
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/carruselP5.jpeg" class="d-block w-100" alt="..." width="600" height="500">
+                            <img src="./img/carrusel2.jpg" class="d-block w-100" alt="..." width="200" height="500">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -157,7 +215,7 @@
 
                             <!--Grid column-->
                             <div class="col-md-5 col-lg-4 col-xl-4 mx-auto mb-3">
-                                <h6 class="text-uppercase fw-bold mb-4">UBÍCANOS EN:</h6>
+                                <h6 id="ubitxt" class="text-uppercase fw-bold mb-4">UBÍCANOS EN:</h6>
                                 <p><i class="fas fa-home me-3"></i> Av. Francisco Cabrera 321 - Chiclayo</p>
                                 <p><i class="fas fa-envelope me-3"></i>
                                     FerretieraClavito@atcliente.com
@@ -167,31 +225,31 @@
                             <!--Grid column-->
 
                             <!--Grid column-->
-                            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                                <h6 class="text-uppercase fw-bold mb-4"> REDES SOCIALES:</h6>
+                            <div id="allredes" class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                                <h6 id="redestxt" class="text-uppercase fw-bold mb-4"> REDES SOCIALES:</h6>
 
                                 <!-- Facebook -->
-                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                <a id="facebtn" class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
                                     <i class="fab fa-facebook-f"></i></a>
                                 <!-- Instagram -->
-                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                <a id="igbtn" class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
                                     <i class="fab fa-instagram"></i></a>
                                 <!-- Twitter -->
-                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                <a id="twbtn" class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
                                     <i class="fab fa-twitter"></i></a>
                                 <!-- Google + -->
-                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                                <a id="ggbtn" class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
                                     <i class="fab fa-google"></i></a>
                             </div>
                             <!--Grid column-->
 
                             <!--Grid column-->
-                            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
-                                <h6 class="text-uppercase fw-bold mb-4">MAPA DE UBICACIÓN:</h6>
+                            <div id="allmapa" class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
+                                <h6 id="mapatxt" class="text-uppercase fw-bold mb-4">MAPA DE UBICACIÓN:</h6>
                                 <table class="table text-center text-white">
                                     <tbody class="fw-normal">
                                         <tr>
-                                            <iframe
+                                            <iframe class="mapa"
                                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.9650211198837!2d-79.84267998565392!3d-6.774111968127418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x904cef2885b35c73%3A0xe63453e9d705ac73!2sFrancisco%20Cabrera%20321%2C%20Chiclayo%2014001!5e0!3m2!1ses!2spe!4v1668718663503!5m2!1ses!2spe"
                                                 width="350" height="300" style="border:0;" allowfullscreen=""
                                                 loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -220,6 +278,10 @@
     <script src="https://kit.fontawesome.com/14fbf06638.js" crossorigin="anonymous"></script>
     <script src="Js/bootstrap.min.js"></script>
     <script src="Js/compras.js"></script>
+    <!-- jQuery CDN Link -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Custom js -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
